2008-04-14  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1942246 ]: (coerce 1 '(double-float 0d0)) fails
	* predtype.d (COERCE): when result_type is a list, pass its CAR to
	coerce_float() instead of the whole list

2008-04-14  Sam Steingold  <sds@gnu.org>

	* stream.d (sec_usec_number): usec should be _divided_ by 1000000,
	not multiplied by it
	* modules/syscalls/calls.c (rusage_to_lisp): add,
	use sec_usec_number() instead of C arithmetics
	(USAGE): use it instead of GETRU

2008-04-09  Sam Steingold  <sds@gnu.org>

	* lispbibl.d: g++ 4.2.* and 4.3.0 are not supported due to g++ bug 35708

2008-04-08  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1934968 ]: log(complex) sometimes inaccurate
	* comptran.d (R_R_norm2_1_R): new function
	(N_log_abs_R): use it together with R_ln1_R
	* realtran.d (F_lnx1_F): converted from F_lnx_F to accept y=x-1
	(F_lnx_F): use F_lnx1_F
	(R_ln1_R): converted from R_ln_R to accept y=x-1
	(R_ln_R): use R_ln1_R

2008-04-07  Sam Steingold  <sds@gnu.org>

	partially fix bug #[ 1934968 ]: log(complex) sometimes inaccurate
	* comptran.d (N_log_abs_R): new function: compute (log (abs z))
	without using hypot, thus avoiding a square root
	(N_log_N, N_N_log_N): use it

2008-04-06  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1936255 ]: COMPILE discards MACRO doc strings
	* compiler.lisp (generatedp): handle lambda lists from macroexpanders

2008-04-06  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object): update slot access of
	FOREIGN-VARIABLE and FOREIGN-FUNCTION for the fv_version/ff_version
	* documentation.lisp (set-function-documentation): ff_properties is 6
	* foreign1.lisp (foreign-function-in-arg-count): ff_argtypes is 4

2008-04-03  Sam Steingold  <sds@gnu.org>

	* lisparit.d, intprint.d (UDS_to_DIGITS): rename to UDS_to_digits
	(DIGITS): rename to digits_t
	(power_table_entry): rename to power_table_entry_t

2008-04-03  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1790496 ]: float format directive ~ve prints spurious digits